--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "predev": "npm run build",
     "prestart": "npm run build",
     "dev": "cross-env NODE_ENV=development concurrently \"tsc --watch\" \"nodemon --experimental-specifier-resolution=node -q dist/index.js\"",
-    "start": "cross-env NODE_ENV=production node dist/index.js"
+    "start": "cross-env NODE_ENV=production node dist/index.js",
+    "migrate": "prisma migrate dev",
+    "prisma": "prisma studio"
   },
   "repository": {
     "type": "git",
@@ -18,6 +20,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.9.0",
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -28,16 +31,17 @@
     "nodemailer": "^6.9.1",
     "pug": "^3.0.2",
     "rimraf": "^4.1.2",
-    "typescript": "^4.9.4",
     "winston": "^3.8.2"
   },
   "devDependencies": {
-    "@types/express": "^4.17.16",
-    "@types/node": "^18.11.18",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.16",
     "@types/module-alias": "^2.0.1",
+    "@types/node": "^18.11.18",
     "concurrently": "^7.6.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "prisma": "^4.9.0",
+    "typescript": "^4.9.4"
   }
 }
