add utilities, middleware & edit logger options

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "predev": "npm run build",
     "prestart": "npm run build",
     "dev": "cross-env NODE_ENV=development concurrently \"tsc --watch\" \"nodemon --experimental-specifier-resolution=node -q dist/index.js\"",
-    "start": "cross-env NODE_ENV=production node dist/index.js",
+    "start": "cross-env NODE_ENV=production node --experimental-specifier-resolution=node dist/index.js",
     "migrate": "prisma migrate dev",
     "prisma": "prisma studio"
   },
