--- a/api/package.json
+++ b/api/package.json
@@ -28,17 +28,22 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "joi": "^17.7.0",
+    "jsonwebtoken": "^9.0.0",
     "nodemailer": "^6.9.1",
     "pug": "^3.0.2",
     "rimraf": "^4.1.2",
     "winston": "^3.8.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.16",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/module-alias": "^2.0.1",
     "@types/node": "^18.11.18",
+    "@types/nodemailer": "^6.4.7",
+    "@types/pug": "^2.0.6",
     "concurrently": "^7.6.0",
     "nodemon": "^2.0.20",
     "prisma": "^4.9.0",
