--- a/api/package.json
+++ b/api/package.json
@@ -29,6 +29,7 @@
     "express": "^4.18.2",
     "joi": "^17.7.0",
     "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
     "pug": "^3.0.2",
     "rimraf": "^4.1.2",
@@ -41,6 +42,7 @@
     "@types/express": "^4.17.16",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/module-alias": "^2.0.1",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.11.18",
     "@types/nodemailer": "^6.4.7",
     "@types/pug": "^2.0.6",
