create an admin service

--- a/api/.env.example
+++ b/api/.env.example
@@ -10,3 +10,7 @@ EMAIL_HOST=smtp.mailtrap.io
 EMAIL_PORT=2525
 EMAIL_USERNAME=your_username
 EMAIL_PASSWORD=your_password
+
+ADMIN_EMAIL=admin@gmail.com
+ADMIN_LOGIN=admin
+ADMIN_PASSWORD=admin_password
