--- a/api/package.json
+++ b/api/package.json
@@ -24,6 +24,7 @@
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "cron": "^2.2.0",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -39,6 +40,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
+    "@types/cron": "^2.0.0",
     "@types/express": "^4.17.16",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/module-alias": "^2.0.1",
