--- a/api/package.json
+++ b/api/package.json
@@ -48,9 +48,13 @@
     "@types/node": "^18.11.18",
     "@types/nodemailer": "^6.4.7",
     "@types/pug": "^2.0.6",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "concurrently": "^7.6.0",
     "nodemon": "^2.0.20",
     "prisma": "^4.9.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.0",
     "typescript": "^4.9.4"
   }
 }
