add docs for /users/profile

--- a/api/docs/users/users.yaml
+++ b/api/docs/users/users.yaml
@@ -64,6 +64,7 @@ paths:
   /users/{id}:
     parameters:
       - name: id
+        in: path
         schema:
           type: integer
         required: true
