--- a/admin/package.json
+++ b/admin/package.json
@@ -10,7 +10,9 @@
     "lint": "eslint . --ext .ts,.tsx"
   },
   "dependencies": {
+    "ra-data-json-server": "^4.7.2",
     "react": "^18.2.0",
+    "react-admin": "^4.7.5",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
