--- a/api/.env.example
+++ b/api/.env.example
@@ -1,5 +1,6 @@
 DATABASE_URL="mysql://USER:PASSWORD@HOST:PORT/DATABASE?KEY1=VALUE&KEY2=VALUE&KEY3=VALUE"
 CLIENT_URL=http://localhost:3000
+ADMIN_URL=http://localhost:5173
 SERVER_URL=http://localhost:8000
 SERVER_PORT=8000
 
