--- a/api/.env.example
+++ b/api/.env.example
@@ -15,3 +15,6 @@ EMAIL_PASSWORD=your_password
 ADMIN_EMAIL=admin@gmail.com
 ADMIN_LOGIN=admin
 ADMIN_PASSWORD=admin_password
+
+STRIPE_API_SECRET_KEY=some_key
+STRIPE_WEBHOOK_KEY=some_key
