add companies to admin panel

--- a/admin/package.json
+++ b/admin/package.json
@@ -10,10 +10,12 @@
     "lint": "eslint . --ext .ts,.tsx"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.11",
     "ra-data-json-server": "^4.7.2",
     "react": "^18.2.0",
     "react-admin": "^4.7.5",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "yup": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^18.13.0",
