--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -29,6 +29,7 @@
   },
   "plugins": ["react", "react-hooks", "@typescript-eslint", "jsx-a11y", "prettier"],
   "rules": {
-    "react/react-in-jsx-scope": "off"
+    "react/react-in-jsx-scope": "off",
+    "react/button-has-type": "warn"
   }
 }
