--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -30,6 +30,7 @@
   "plugins": ["react", "react-hooks", "@typescript-eslint", "jsx-a11y", "prettier"],
   "rules": {
     "react/react-in-jsx-scope": "off",
-    "react/button-has-type": "warn"
+    "react/button-has-type": "warn",
+    "react/no-unescaped-entities": "off"
   }
 }
