--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-hook-form": "^7.43.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
+    "react-select": "^5.7.0",
     "redux-persist": "^6.0.0",
     "zod": "^3.20.6"
   },
