--- a/client/package.json
+++ b/client/package.json
@@ -18,9 +18,11 @@
     "@emotion/styled": "^11.10.6",
     "@hookform/resolvers": "^2.9.11",
     "@reduxjs/toolkit": "^1.9.3",
+    "date-fns": "^2.29.3",
     "framer-motion": "^9.1.2",
     "google-map-react": "^2.2.0",
     "react": "^18.2.0",
+    "react-day-picker": "^8.6.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.2",
     "react-icons": "^4.7.1",
