--- a/client/package.json
+++ b/client/package.json
@@ -18,13 +18,14 @@
     "@emotion/styled": "^11.10.6",
     "@fontsource/noto-sans": "^4.5.11",
     "@hookform/resolvers": "^2.9.11",
+    "@react-google-maps/api": "^2.18.1",
     "@reduxjs/toolkit": "^1.9.3",
     "date-fns": "^2.29.3",
     "framer-motion": "^9.1.2",
-    "google-map-react": "^2.2.0",
     "react": "^18.2.0",
     "react-day-picker": "^8.6.0",
     "react-dom": "^18.2.0",
+    "react-geocode": "^0.2.3",
     "react-hook-form": "^7.43.2",
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
@@ -38,6 +39,7 @@
     "@types/node": "^18.14.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/react-geocode": "^0.2.1",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
     "@vitejs/plugin-react-swc": "^3.0.0",
