--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@hookform/resolvers": "^2.9.11",
     "@react-google-maps/api": "^2.18.1",
     "@reduxjs/toolkit": "^1.9.3",
+    "@stripe/stripe-js": "^1.48.0",
     "date-fns": "^2.29.3",
     "framer-motion": "^9.1.2",
     "react": "^18.2.0",
