add @fontsource/pacifico and @fontsource/poppins

--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "@chakra-ui/react": "^2.5.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@fontsource/noto-sans": "^4.5.11",
+    "@fontsource/pacifico": "^4.5.9",
+    "@fontsource/poppins": "^4.5.10",
     "@hookform/resolvers": "^2.9.11",
     "@react-google-maps/api": "^2.18.1",
     "@reduxjs/toolkit": "^1.9.3",
