--- a/api/package.json
+++ b/api/package.json
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@gitlab.ucode.world:connect-khpi/connect-fullstack-uevent/pbalazhy.git"
+    "url": "https://github.com/YaroslavChuiko/Uevent.git"
   },
   "author": "",
   "license": "ISC",
